--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/pedrop097/ProyectoBackend#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "nodemon": "^2.0.19"
   }
 }
