--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 node_modules
-prueba2.js
-products.json
-indextp1.js
-express2.js
-index.js
+Desafio1
+Desafio2
+Desafio3
+Desafio4
+Desafio5   
+Desafio6
+ejercicios en clase
+assets
