--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,12 @@ Desafio4
 Desafio5   
 Desafio6
 ejercicios en clase
+Ejercicios en clase sql
 assets
+Desafio7
+mongodb
+api
+contenedores
+daos
+DB
+2da entrega
