--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "proyecto-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "src/main.js",
   "scripts": {
-    "start": "index.js",
+    "start": "node src/server.js",
+    "dev": "nodemon node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,10 +23,23 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "faker": "^6.6.6",
+    "firebase-admin": "^11.2.0",
+    "io": "^1.0.5",
+    "knex": "^2.3.0",
     "moment": "^2.29.4",
+    "mongodb": "^3.6.11",
+    "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
+    "normalizr": "^3.6.2",
     "pug": "^3.0.2",
-    "socket.io": "^4.5.2"
+    "socket.io": "^4.5.2",
+    "sqlite3": "^5.1.2"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
+    "jest": "^29.2.2"
   }
 }
