--- a/package.json
+++ b/package.json
@@ -1,47 +1,29 @@
 {
-  "name": "proyecto-backend",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "src/main.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/pedrop097/ProyectoBackend.git"
-  },
-  "author": "Pedro Palacios",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/pedrop097/ProyectoBackend/issues"
-  },
-  "homepage": "https://github.com/pedrop097/ProyectoBackend#readme",
-  "dependencies": {
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-handlebars": "^6.0.6",
-    "faker": "^6.6.6",
-    "firebase-admin": "^11.2.0",
-    "io": "^1.0.5",
-    "knex": "^2.3.0",
-    "modules": "^0.4.0",
-    "moment": "^2.29.4",
-    "mongodb": "^3.6.11",
-    "mongoose": "^5.13.7",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
-    "node": "^19.0.1",
-    "nodemon": "^2.0.20",
-    "normalizr": "^3.6.2",
-    "pug": "^3.0.2",
-    "socket.io": "^4.5.2",
-    "sqlite3": "^5.1.2"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^7.4.0",
-    "jest": "^29.2.2"
+	"name": "proyecto-backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+	  "start": "nodemon index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+	  "@faker-js/faker": "^6.1.2",
+	  "bcrypt": "^5.0.1",
+	  "connect-mongo": "^4.6.0",
+	  "express": "^4.17.1",
+	  "express-session": "^1.17.2",
+	  "faker": "^5.5.3",
+	  "firebase-admin": "^10.0.0",
+	  "mongodb": "^4.2.0",
+	  "mongoose": "^6.0.14",
+	  "nodemon": "^2.0.13",
+	  "normalizr": "^3.6.1",
+	  "passport": "^0.5.0",
+	  "passport-local": "^1.0.0",
+	  "socket.io": "^4.2.0",
+	  "uuid": "^8.3.2"
+	}
   }
-}
